--- a/.github/workflows/main_bartender-app.yml
+++ b/.github/workflows/main_bartender-app.yml
@@ -69,5 +69,5 @@ jobs:
         with:
           app-name: 'bartender-app'
           slot-name: 'Production'
-          package: .
+          package: "./dist/bartender-webapp"
           
