--- a/.github/workflows/main_bartender-app.yml
+++ b/.github/workflows/main_bartender-app.yml
@@ -70,4 +70,5 @@ jobs:
           app-name: 'bartender-app'
           slot-name: 'Production'
           package: "./bartender-webapp/dist/bartender-webapp"
+          deployment-method: 'zip'
           
