--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "bartender-webapp"
-  command = "npm run build:prod"
+  command = "npm run build"
   publish = "dist/browser"
   
 
